[gd_scene load_steps=4 format=3 uid="uid://combatant_display"]

[ext_resource type="Script" path="res://scripts/ui/gameplay/combatant_display.gd" id="1_combatant_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bar_bg"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bar_fill"]
bg_color = Color(0.3, 0.69, 0.31, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="CombatantDisplay" type="Control"]
custom_minimum_size = Vector2(90, 120)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_combatant_script")

[node name="SpriteContainer" type="Control" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -50.0
offset_right = 40.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimalIcon" type="Label" parent="SpriteContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "üê∞"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="SpriteContainer"]
custom_minimum_size = Vector2(70, 10)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = 5.0
offset_right = 35.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_health_bar_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_health_bar_fill")
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="SpriteContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = 18.0
offset_right = 30.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "15/15"
horizontal_alignment = 1

[node name="KnockoutOverlay" type="ColorRect" parent="SpriteContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.6)

[node name="StarsContainer" type="Control" parent="SpriteContainer"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -15.0
offset_right = 45.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Rabbit"
horizontal_alignment = 1
